fixed small issues with spacing

--- a/css/index.scss
+++ b/css/index.scss
@@ -139,6 +139,7 @@ a {
 	color: black;
 	text-decoration: none;
 	font-size: $normal_font;
+    margin-top: 1em;
 	margin-bottom: 0;
 }
 
